--- a/style.css
+++ b/style.css
@@ -965,13 +965,20 @@ html, body {
 
 .diamond-select-item .list-desktop li>.item-key {
     color: #c8c8c8;
- }
+}
 
- .diamond-select-item .choose-diamond-button-desktop {
+.diamond-select-item .choose-diamond-button-desktop {
     height: 35px;
     margin-left: 8px;
     margin-right: 8px;
- }
+}
+
+.footer {
+    border-top: 2px solid #c8c8c8;
+    padding: 15px 0;
+    color: #c8c8c8;
+    text-align: center;
+}
 
 /* Media Queries */
 
